# arquitetura-project

./: README.md  main.py  pyproject.toml
